--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -992,5 +992,15 @@
     "plugin_profile_rss3_inactive_project": "Inactive Project",
     "plugin_profile_rss3_no_activity_time": "No activity time",
     "plugin_profile_rss3_attended": "Attended",
-    "plugin_vcent_last_offer_at": "LATEST OFFER at"
+    "plugin_vcent_last_offer_at": "LATEST OFFER at",
+    "nft_input_address_label": "Please input contract address",
+    "nft_input_tokenid_label": "Please input token ID",
+    "nft_owner_hint": "This NFT does not exist or does not belong to you.",
+    "nft_add_dialog_title": "Add Collectible",
+    "nft_add_button_label": "Add",
+    "nft_list_title": "NFT Avatar",
+    "nft_wallet_change": "Change",
+    "nft_button_add_collectible": "Add Collectible",
+    "nft_avatar": "NFT Avatar",
+    "nft_button_set_avatar": "Set NFT Avatar"
 }
