feat: update connect dialog UI

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -45,6 +45,7 @@
     "auto_paste_failed_snackbar_action_close": "Close",
     "automation_request_click_post_button": "Please click the “Post” button to open the compose dialog.",
     "try_again": "Try Again",
+    "ok": "OK",
     "cancel": "Cancel",
     "twitter_account": "realMaskNetwork",
     "facebook_account": "masknetwork",
@@ -83,10 +84,11 @@
     "buy_now": "Buy Now",
     "setup_guide_optional": "[Optional]",
     "setup_guide_find_username_title": "Find your username",
-    "setup_guide_find_username_text": "Mask needs the username to connect your Profile to your Persona.<br /> Make sure it is correct.",
+    "setup_guide_find_username_text": "Mask needs the username to connect your profile to your persona.",
     "setup_guide_connect_auto": "Connect",
-    "setup_guide_connect_failed": "Failed… Please try it again.",
+    "setup_guide_connect_failed": "Re-Connect",
     "user_guide_tip_connected": "You have connected to this account successfully.",
+    "setup_guide_say_hello_content": "Hellow Mask world. This is my first encrypted message. Install https://mask.io... to send me encrypted post. Follow @realMaskNetwork to explore Web 3.0.",
     "user_guide_tip_1": "Click here to connect your wallet. You can choose the network or change your wallet here.",
     "user_guide_tip_2": "Click here to have a quick start.",
     "create_persona": "Create persona",
