feat: enable user guide

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -89,8 +89,9 @@
     "setup_guide_connect_failed": "Re-Connect",
     "user_guide_tip_connected": "You have connected to this account successfully.",
     "setup_guide_say_hello_content": "Hellow Mask world. This is my first encrypted message. Install https://mask.io... to send me encrypted post. Follow @realMaskNetwork to explore Web 3.0.",
-    "user_guide_tip_1": "Click here to connect your wallet. You can choose the network or change your wallet here.",
-    "user_guide_tip_2": "Click here to have a quick start.",
+    "user_guide_tip_1": "Connect wallet to explore multi-chain dApps.",
+    "user_guide_tip_2": "Setup your exclusive NFT Avatar, explore the endless possibilities of Web 3.0.",
+    "user_guide_tip_3": "Click here to have a quick start.",
     "create_persona": "Create persona",
     "connect_persona": "Connect persona",
     "mask_network": "Mask Network",
