--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -91,6 +91,8 @@
     "user_guide_tip_2": "Click here to have a quick start.",
     "create_persona": "Create persona",
     "connect_persona": "Connect persona",
+    "please_create_persona": "Please create persona",
+    "please_connect_persona": "Please connect persona",
     "mask_network": "Mask Network",
     "import": "Import",
     "no_search_result": "No result",
@@ -174,6 +176,7 @@
     "wallet_search_no_result": "No results.",
     "wallet_confirm_with_password": "Confirm with password",
     "wallet_airdrop_nft_unclaimed_title": "NFT Airdrop Unclaimed:",
+    "plugin_not_enabled": "{{plugin}} (Not Enabled)",
     "plugin_external_unknown_plugin": "New unknown Mask plugins found. Do you want to load them?",
     "plugin_external_loader_search_holder": "Search for an external plugin",
     "plugin_external_loader_search_button": "Search for plugin",
