feat: savings plugin, improved typesystems and format

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -397,6 +397,18 @@
     "plugin_trader_price_updated": "Price Updated",
     "plugin_trader_view_pair_analytics": "View pair analytics",
     "plugin_savings": "Savings",
+    "plugin_savings_type": "Type",
+    "plugin_savings_apy": "APY",
+    "plugin_savings_wallet": "Wallet",
+    "plugin_savings_operation": "Operation",
+    "plugin_savings_amount": "Amount",
+    "plugin_savings_deposit": "Deposit",
+    "plugin_savings_withdraw": "Withdraw",
+    "plugin_savings_fee": "Transaction Fee",
+    "plugin_savings_process_deposit": "Processing Deposit",
+    "plugin_savings_process_withdraw": "Processing Withdrawal",
+    "plugin_savings_lido_deposit": "Stake Lido's stETH",
+    "plugin_savings_lido_withdraw": "Swap Lido's stETH",
     "plugin_trader_swap": "Swap",
     "plugin_trader_wrap": "Wrap",
     "plugin_trader_unwrap": "Unwrap",
