--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -524,7 +524,8 @@
     "plugin_ito_unlock_time_cert": "ITO Mask unlock time is {{date}}.",
     "plugin_ito_unlock_time": "Unlock Time {{zone}}",
     "plugin_ito_launch_campaign": "SocialFi Launch Campaign",
-    "plugin_ito_total_claimable_count": "Total: ",
+    "plugin_ito_total_claimable_count_one": "Total: {{count}} item",
+    "plugin_ito_total_claimable_count_other": "Total: {{count}} items",
     "plugin_ito_qualification_label": "Plugin Contract",
     "plugin_ito_message_label": "Title",
     "plugin_ito_region_label": "IP Region Selection",
