--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -599,6 +599,7 @@
     "plugin_ito_unlocking_symbol": "Unlocking {{symbol}}",
     "plugin_ito_continue": "Continue",
     "plugin_ito_view_on_explorer": "View on Explorer",
+    "plugin_ito_unlock_tip": "Allow the contract <contractLink>{{address}}</contractLink> to use your {{symbol}} tokens when a new ITO round starts later.",
     "plugin_collectible_you": "You",
     "plugin_collectible_done": "Done",
     "plugin_collectible_retry": "Retry",
