feat: add pin extension tip

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -46,6 +46,7 @@
     "automation_request_click_post_button": "Please click the “Post” button to open the compose dialog.",
     "try_again": "Try Again",
     "ok": "OK",
+    "start": "Start",
     "cancel": "Cancel",
     "twitter_account": "realMaskNetwork",
     "facebook_account": "masknetwork",
@@ -87,6 +88,13 @@
     "setup_guide_connect_failed": "Re-Connect",
     "user_guide_tip_connected": "You have connected to this account successfully.",
     "setup_guide_say_hello_content": "Hellow Mask world. This is my first encrypted message. Install https://mask.io... to send me encrypted post. Follow @realMaskNetwork to explore Web 3.0.",
+    "setup_guide_pin_tip_0": "Don't forget to pin Mask Network in your browser toolbar to access web 3.0 easily.",
+    "setup_guide_pin_tip_1": "Click on ",
+    "setup_guide_pin_tip_1_s": " at top right of your browser.",
+    "setup_guide_pin_tip_2": "Find Mask Network in the list of extensions and click the ",
+    "setup_guide_pin_tip_2_s": " button.",
+    "setup_guide_pin_tip_3": "Pinned successfully.",
+    "setup_guide_pin_dissmiss": "Don't show again.",
     "user_guide_tip_1": "Connect wallet to explore multi-chain dApps.",
     "user_guide_tip_2": "Setup your exclusive NFT Avatar, explore the endless possibilities of Web 3.0.",
     "user_guide_tip_3": "Click here to have a quick start.",
