--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -94,7 +94,7 @@
     "setup_guide_pin_tip_2": "Find Mask Network in the list of extensions and click the ",
     "setup_guide_pin_tip_2_s": " button.",
     "setup_guide_pin_tip_3": "Pinned successfully.",
-    "setup_guide_pin_dissmiss": "Don't show again.",
+    "setup_guide_pin_dismiss": "Don't show again.",
     "user_guide_tip_1": "Connect wallet to explore multi-chain dApps.",
     "user_guide_tip_2": "Setup your exclusive NFT Avatar, explore the endless possibilities of Web 3.0.",
     "user_guide_tip_3": "Click here to have a quick start.",
