--- a/packages/mask/shared-ui/locales/qya-AA.json
+++ b/packages/mask/shared-ui/locales/qya-AA.json
@@ -91,6 +91,8 @@
     "user_guide_tip_2": "crwdns9061:0crwdne9061:0",
     "create_persona": "crwdns10317:0crwdne10317:0",
     "connect_persona": "crwdns10319:0crwdne10319:0",
+    "please_create_persona": "crwdns10807:0crwdne10807:0",
+    "please_connect_persona": "crwdns10809:0crwdne10809:0",
     "mask_network": "crwdns10321:0crwdne10321:0",
     "import": "crwdns4193:0crwdne4193:0",
     "no_search_result": "crwdns4217:0crwdne4217:0",
@@ -174,6 +176,7 @@
     "wallet_search_no_result": "crwdns8139:0crwdne8139:0",
     "wallet_confirm_with_password": "crwdns10141:0crwdne10141:0",
     "wallet_airdrop_nft_unclaimed_title": "crwdns8093:0crwdne8093:0",
+    "plugin_not_enabled": "crwdns10811:0{{plugin}}crwdne10811:0",
     "plugin_external_unknown_plugin": "crwdns10143:0crwdne10143:0",
     "plugin_external_loader_search_holder": "crwdns10145:0crwdne10145:0",
     "plugin_external_loader_search_button": "crwdns10147:0crwdne10147:0",
@@ -365,6 +368,14 @@
     "plugin_red_packet_nft_account_name": "crwdns8159:0crwdne8159:0",
     "plugin_red_packet_nft_attached_message": "crwdns8161:0crwdne8161:0",
     "plugin_red_packet_nft_total_amount": "crwdns8163:0crwdne8163:0",
+    "plugin_red_packet_nft_select_collection": "crwdns10813:0crwdne10813:0",
+    "plugin_red_packet_nft_max_shares": "crwdns10815:0{{amount}}crwdne10815:0",
+    "plugin_red_packet_nft_max_shares_tip": "crwdns10817:0{{amount}}crwdne10817:0",
+    "plugin_red_packet_nft_shift_select_tip": "crwdns10819:0{{text}}crwdne10819:0",
+    "plugin_red_packet_nft_non_existed_tip": "crwdns10821:0crwdne10821:0",
+    "plugin_red_packet_nft_select_all_option": "crwdns10823:0{{total}}crwdne10823:0",
+    "plugin_red_packet_nft_select_partially_option": "crwdns10825:0crwdne10825:0",
+    "plugin_red_packet_nft_approve_all_tip": "crwdns10827:0crwdne10827:0",
     "plugin_red_packet_completed": "crwdns8165:0crwdne8165:0",
     "plugin_red_packet_expired": "crwdns8167:0crwdne8167:0",
     "plugin_red_packet_indivisible": "crwdns10621:0{{amount}}crwdnd10621:0{{symbol}}crwdne10621:0",
@@ -571,9 +582,11 @@
     "plugin_ito_unlocking_symbol": "crwdns5179:0{{symbol}}crwdne5179:0",
     "plugin_ito_continue": "crwdns5181:0crwdne5181:0",
     "plugin_ito_view_on_explorer": "crwdns5183:0crwdne5183:0",
+    "plugin_ito_unlock_tip": "crwdns10829:0{{address}}crwdnd10829:0{{symbol}}crwdne10829:0",
     "plugin_collectible_you": "crwdns5185:0crwdne5185:0",
     "plugin_collectible_done": "crwdns5187:0crwdne5187:0",
     "plugin_collectible_retry": "crwdns5189:0crwdne5189:0",
+    "plugin_collectible_get_more_token": "crwdns10805:0{{token}}crwdne10805:0",
     "plugin_collectible_sell": "crwdns5191:0crwdne5191:0",
     "plugin_collectible_checkout": "crwdns5193:0crwdne5193:0",
     "plugin_collectible_place_bid": "crwdns5195:0crwdne5195:0",
