--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -409,6 +409,7 @@
     "plugin_trader_view_pair_analytics": "View pair analytics",
     "plugin_savings": "Savings",
     "plugin_savings_type": "Type",
+    "plugin_no_protocol_available": "No savings protocols available on this network",
     "plugin_savings_apy": "APY",
     "plugin_savings_wallet": "Wallet",
     "plugin_savings_operation": "Operation",
