--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1002,5 +1002,25 @@
     "plugin_profile_rss3_inactive_project": "Inactive Project",
     "plugin_profile_rss3_no_activity_time": "No activity time",
     "plugin_profile_rss3_attended": "Attended",
-    "plugin_vcent_last_offer_at": "LATEST OFFER at"
+    "plugin_vcent_last_offer_at": "LATEST OFFER at",
+    "plugin_artblocks_not_active": "This project is no more active",
+    "plugin_artblocks_completed": "Completed",
+    "plugin_artblocks_paused": "Paused",
+    "plugin_artblocks_collection": "Collection",
+    "plugin_artblocks_details": "Details",
+    "plugin_artblocks_created_by": "Created by",
+    "plugin_artblocks_purchase": "Purchase",
+    "plugin_artblocks_legal_text": "By checking this box, I agree to ArtBlocks's <terms>Terms of Service</terms>.",
+    "plugin_artblocks_check_tos_document": "Please check ToS document",
+    "plugin_artblocks_price_per_mint": "Price per mint",
+    "plugin_artblocks_price_row": "Price:",
+    "plugin_artblocks_minted_row": "Minted:",
+    "plugin_artblocks_license_row": "License:",
+    "plugin_artblocks_library_row": "Library:",
+    "plugin_artblocks_website": "Website",
+    "plugin_artblocks_infos": "Infos",
+    "plugin_artblocks_chain": "Chain",
+    "plugin_artblocks_blockchain_row": "Blockchain:",
+    "plugin_artblocks_contract_row": "Contract:",
+    "plugin_artblocks_smt_wrong": "Something went wrong!"
 }
