--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -358,14 +358,15 @@
     "plugin_red_packet_hint": "You can withdraw the remaining balance 24 hours after the Lucky Drop is sent.",
     "plugin_red_packet_token": "Token",
     "plugin_red_packet_message_label": "Title",
-    "plugin_red_packet_create": "Creating Lucky Drop",
-    "plugin_red_packet_create_with_token": "Creating Lucky Drop with {{symbol}}",
+    "plugin_red_packet_create": "Create a Lucky Drop",
+    "plugin_red_packet_create_with_token": "Create a Lucky Drop with {{symbol}}",
     "plugin_red_packet_history_duration": "Time: {{startTime}} ~ {{endTime}} (UTC+8)",
     "plugin_red_packet_history_total_amount": "Total Amount: {{amount}} {{symbol}}",
     "plugin_red_packet_history_total_claimed_amount": "Total: <span><strong>{{claimedAmount}}/{{amount}}</strong></span> {{symbol}}",
     "plugin_red_packet_history_claimed": "Claimed: <strong>{{claimedShares}}/{{shares}}</strong> Share",
     "plugin_red_packet_history_split_mode": "Split Mode: {{mode}}",
     "plugin_red_packet_history_send": "Send",
+    "plugin_nft_red_packet_create": "Create an NFT Lucky Drop",
     "plugin_red_packet_nft_account_name": "Wallet account",
     "plugin_red_packet_nft_attached_message": "Attached Message",
     "plugin_red_packet_nft_total_amount": "Total Amount",
