--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -339,6 +339,7 @@
     "plugin_red_packet_nft_share_claimed_message": "I just claimed an NFT lucky drop from @{{sender}} on {{network}} network. Follow @{{account}} (mask.io) to claim NFT lucky drops.\n#mask_io #LuckyDrop\n{{payload}}",
     "plugin_red_packet_nft_share_claimed_message_not_twitter": "I just claimed an NFT lucky drop from @{{sender}} on {{network}} network. \n{{payload}}",
     "plugin_red_packet_nft_tip": "This is an NFT lucky drop.",
+    "plugin_red_packet_nft_no_history": "You haven’t created any NFT lucky drop yet. Try to create and share lucky with your friends.",
     "plugin_red_packet_attached_message": "Attached Message",
     "plugin_red_packet_from": "From: @{{name}}",
     "plugin_red_packet_description_claimed": "You got {{amount}} {{symbol}}",
