chore: contract method description (#5424)
* chore: transaction bar describe

* chore: ito fill pool

* fix: type

* chore: nft lucky drop create

* chore: reply code review

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -361,13 +361,15 @@
     "plugin_red_packet_hint": "You can withdraw the remaining balance 24 hours after the Lucky Drop is sent.",
     "plugin_red_packet_token": "Token",
     "plugin_red_packet_message_label": "Title",
-    "plugin_red_packet_create_with_token": "Creating Lucky Drop with {{symbol}}",
+    "plugin_red_packet_create": "Create a Lucky Drop",
+    "plugin_red_packet_create_with_token": "Create a Lucky Drop with {{amount}} {{symbol}}",
     "plugin_red_packet_history_duration": "Time: {{startTime}} ~ {{endTime}} (UTC+8)",
     "plugin_red_packet_history_total_amount": "Total Amount: {{amount}} {{symbol}}",
     "plugin_red_packet_history_total_claimed_amount": "Total: <span><strong>{{claimedAmount}}/{{amount}}</strong></span> {{symbol}}",
     "plugin_red_packet_history_claimed": "Claimed: <strong>{{claimedShares}}/{{shares}}</strong> Share",
     "plugin_red_packet_history_split_mode": "Split Mode: {{mode}}",
     "plugin_red_packet_history_send": "Send",
+    "plugin_nft_red_packet_create": "Create an NFT Lucky Drop",
     "plugin_red_packet_nft_account_name": "Wallet account",
     "plugin_red_packet_nft_attached_message": "Attached Message",
     "plugin_red_packet_nft_total_amount": "Total Amount",
@@ -538,6 +540,7 @@
     "plugin_ito_region_ban": "This Pool is banned by its creator at your region",
     "plugin_ito_next": "Next",
     "plugin_ito_back": "Back",
+    "plugin_ito_transaction_dialog_summary_with_no_token": "Create an ITO.",
     "plugin_ito_transaction_dialog_summary": "Create an ITO with {{amount}} {{symbol}}.",
     "plugin_ito_swap": "Swap",
     "plugin_ito_send_tip": "You can find your ITOs in the Past tab.",
