feat: add logo for QR code

--- a/packages/dashboard/src/locales/en-US.json
+++ b/packages/dashboard/src/locales/en-US.json
@@ -40,6 +40,9 @@
     "setup_page_create_restore_title": "Restoring from Identity or Backups",
     "setup_page_create_restore_subtitle": "Restoring from identity & historical backups.",
     "setup_page_create_restore_button": "Recovery or Sign In",
+    "create_account_mask_id": "MASK ID",
+    "create_account_private_key": "Private Key",
+    "create_account_identity_id": "Identity ID",
     "create_account_identity_title": "Create an Identity for Mask Network",
     "create_account_sign_in_button": "Recovery",
     "create_account_persona_exists": "Persona already exists.",
