fix: update unlock popup ui

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -967,7 +967,8 @@
     "popups_wallet_signature_request": "Signature request",
     "popups_wallet_signature_request_message": "Message",
     "popups_wallet_contract_interaction": "Contract Interaction",
-    "popups_wallet_contract_interaction_approve": "Approve",
+    "popups_wallet_token_unlock_permission": "Token unlock permission",
+    "popups_wallet_token_infinite_unlock": "Infinite unlock",
     "popups_wallet_contract_interaction_transfer": "Transfer",
     "popups_wallet_contract_interaction_create_lucky_drop": "Create Lucky Drop",
     "popups_wallet_contract_interaction_gas_fee": "Gas fee",
