--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -259,8 +259,11 @@
     "plugin_wallet_snackbar_swap_token": "Swap Token",
     "plugin_wallet_guiding_step_1": "1. Choose Network",
     "plugin_wallet_guiding_step_2": "2. Choose Wallet",
-    "plugin_wallet_connect_to": "Connect to",
-    "plugin_wallet_connected_to": "Connected to",
+    "plugin_wallet_connect_with": "Connect with",
+    "plugin_wallet_connect_with_retry": "Try Again",
+    "plugin_wallet_connected_with": "Connected with",
+    "plugin_wallet_metamask_error_already_request": "You've opened the popup, please confirm.",
+    "plugin_wallet_connect_tip": "Please make sure that your {{providerName}} wallet is provided by the offical <providerLink>{{providerShortenLink}}</providerLink>.",
     "plugin_wallet_collections": "Collections",
     "plugin_wallet_select_a_token": "Select a Token",
     "plugin_wallet_select_a_nft_contract": "Select an NFT Contract",
