--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -345,6 +345,7 @@
     "plugin_red_packet_nft_share_claimed_message": "I just claimed an NFT lucky drop from @{{sender}} on {{network}} network. Follow @{{account}} (mask.io) to claim NFT lucky drops.\n#mask_io #LuckyDrop\n{{payload}}",
     "plugin_red_packet_nft_share_claimed_message_not_twitter": "I just claimed an NFT lucky drop from @{{sender}} on {{network}} network. \n{{payload}}",
     "plugin_red_packet_nft_tip": "This is an NFT lucky drop.",
+    "plugin_red_packet_nft_no_history": "You haven’t created any NFT lucky drop yet. Try to create and share lucky with your friends.",
     "plugin_red_packet_attached_message": "Attached Message",
     "plugin_red_packet_from": "From: @{{name}}",
     "plugin_red_packet_description_claimed": "You got {{amount}} {{symbol}}",
@@ -523,8 +524,6 @@
     "plugin_ito_claim": "Claim",
     "plugin_ito_claiming": "Claiming...",
     "plugin_ito_claim_all": "Claim All",
-    "plugin_ito_claim_all_old_contract": "Old ITO Contract",
-    "plugin_ito_claim_all_new_contract": "New ITO Contract",
     "plugin_ito_qualification_start_time": "Qualification Start Time:",
     "plugin_ito_error_qualification_start_time": "Invalid: Qualification start time should be earlier than ITO end time",
     "plugin_ito_end_time": "End Time {{zone}}",
@@ -966,7 +965,6 @@
     "popups_wallet_contract_interaction": "Contract Interaction",
     "popups_wallet_contract_interaction_approve": "Approve",
     "popups_wallet_contract_interaction_transfer": "Transfer",
-    "popups_wallet_contract_interaction_create_lucky_drop": "Create Lucky Drop",
     "popups_wallet_contract_interaction_gas_fee": "Gas fee",
     "popups_wallet_contract_interaction_edit": "Edit",
     "popups_wallet_contract_interaction_total": "Total",
