refactor: ui improve

--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -2,16 +2,16 @@
     "wallet": "Wallet",
     "persona": "Persona",
     "unsupported_network": "Unsupported Network",
-    "connect_wallet_tip": "Connect your wallet here. In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
+    "connect_wallet_tip_intro": "Connect your wallet here.",
+    "connect_wallet_tip": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
     "verify_wallet_button": "Verify your wallet",
     "add_wallet_button": "Add wallet",
     "verify_wallet_dialog_title": "Verify your wallet",
-    "bind_wallet_bound_error": "The wallet address is already tied to persona.",
-    "unbind_wallet_same_account_error": "Wrong Wallet",
+    "bind_wallet_bound_error": "This wallet address has already bound.",
+    "unbind_wallet_same_account_error": "Please switch to the address that needs to be unbound.",
     "unbind_dialog_title": "Unbind wallet",
     "persona_sign": "Persona Sign",
     "wallet_sign": "Wallet Sign",
-    "unbind_or": "or",
     "copied": "copied",
     "view_on_explorer": "View on explorer",
     "notify_persona_sign": "Persona Sign",
@@ -26,5 +26,8 @@
     "create_persona": "Create persona",
     "connect_persona": "Connect persona",
     "please_create_persona": "Please create persona",
-    "please_connect_persona": "Please connect persona"
+    "please_connect_persona": "Please connect persona",
+    "unbind_persona_tip": "Choose either your Persona or the currently bound wallet to sign to unbind.",
+    "unbind_wallet_tip": "Choose either your Persona or the currently bound wallet to sign to unbind.",
+    "done": "Done"
 }
