--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -45,6 +45,8 @@
     "auto_paste_failed_snackbar_action_close": "Close",
     "automation_request_click_post_button": "Please click the “Post” button to open the compose dialog.",
     "try_again": "Try Again",
+    "ok": "OK",
+    "start": "Start",
     "cancel": "Cancel",
     "twitter_account": "realMaskNetwork",
     "facebook_account": "masknetwork",
@@ -81,14 +83,22 @@
     "download": "Download",
     "failed": "Failed",
     "buy_now": "Buy Now",
-    "setup_guide_optional": "[Optional]",
-    "setup_guide_find_username_title": "Find your username",
-    "setup_guide_find_username_text": "Mask needs the username to connect your Profile to your Persona.<br /> Make sure it is correct.",
+    "setup_guide_login": "Please sign up or log in to connect Mask network.",
+    "setup_guide_find_username_text": "Mask needs the username to connect your profile to your persona.",
     "setup_guide_connect_auto": "Connect",
-    "setup_guide_connect_failed": "Failed… Please try it again.",
+    "setup_guide_connect_failed": "Re-Connect",
     "user_guide_tip_connected": "You have connected to this account successfully.",
-    "user_guide_tip_1": "Click here to connect your wallet. You can choose the network or change your wallet here.",
-    "user_guide_tip_2": "Click here to have a quick start.",
+    "setup_guide_say_hello_content": "Hellow Mask world. This is my first encrypted message. Install https://mask.io to send me encrypted post. Follow @realMaskNetwork to explore Web 3.0.",
+    "setup_guide_pin_tip_0": "Don't forget to pin Mask Network in your browser toolbar to access web 3.0 easily.",
+    "setup_guide_pin_tip_1": "Click on ",
+    "setup_guide_pin_tip_1_s": " at top right of your browser.",
+    "setup_guide_pin_tip_2": "Find Mask Network in the list of extensions and click the ",
+    "setup_guide_pin_tip_2_s": " button.",
+    "setup_guide_pin_tip_3": "Pinned successfully.",
+    "setup_guide_pin_dismiss": "Don't show again.",
+    "user_guide_tip_1": "Connect wallet to explore multi-chain dApps.",
+    "user_guide_tip_2": "Setup your exclusive NFT Avatar, explore the endless possibilities of Web 3.0.",
+    "user_guide_tip_3": "Click here to have a quick start.",
     "create_persona": "Create persona",
     "connect_persona": "Connect persona",
     "please_create_persona": "Please create persona",
@@ -163,7 +173,6 @@
     "share_to": "Share to…",
     "sharing": "Sharing",
     "transfer": "Transfer",
-    "username": "Username",
     "export": "Export",
     "wallet_load_retry": "Failed to load {{symbol}}. Click to retry.",
     "wallet_name": "Wallet Name",
