--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -444,7 +444,6 @@
     "plugin_trader_error_amount_absence": "Enter an amount",
     "plugin_trader_error_insufficient_balance": "Insufficient {{symbol}} balance",
     "plugin_trader_error_insufficient_lp": "Insufficient liquidity for this trade",
-    "plugin_trader_error_price_impact_too_high": "Price Impact Too High",
     "plugin_trade_error_input_amount_less_minimum_amount": "Input amount is below the minimum amount",
     "plugin_trader_settings_data_source_primary": "Trending Data Source",
     "plugin_trader_settings_data_source_secondary": "Select the source of cryptocurrencies' trending data.",
@@ -462,6 +461,13 @@
     "plugin_trader_confirm_max_price_slippage": "Max Price Slippage",
     "plugin_trader_confirm_minimum_received": "Minimum Received",
     "plugin_trader_confirm_tips": "Setting the max price slippage too low may cause a trade to fail due to price fluctuations.",
+    "plugin_trader_price_impact_warning_tips": "Setting the max price slippage too high may cause the minimum amount returned lower than the amount desired.",
+    "plugin_trader_confirm_swap": "Confirm Swap",
+    "plugin_trader_accept": "Accept",
+    "plugin_trader_price_impact": "Price Impact",
+    "plugin_trader_price_image_value": "Price Impact ({{percent}})",
+    "plugin_trader_slippage_warning": "You may receive 10% less with this level of slippage tolerance.",
+    "plugin_trader_confirm_price_impact": "Confirm Price Impact {{percent}}",
     "plugin_trader_max_slippage": "Max Slippage",
     "plugin_trader_gas_setting_instant": "Instant",
     "plugin_trader_gas_setting_high": "High",
@@ -972,7 +978,8 @@
     "popups_wallet_signature_request": "Signature request",
     "popups_wallet_signature_request_message": "Message",
     "popups_wallet_contract_interaction": "Contract Interaction",
-    "popups_wallet_contract_interaction_approve": "Approve",
+    "popups_wallet_token_unlock_permission": "Token unlock permission",
+    "popups_wallet_token_infinite_unlock": "Infinite unlock",
     "popups_wallet_contract_interaction_transfer": "Transfer",
     "popups_wallet_contract_interaction_gas_fee": "Gas fee",
     "popups_wallet_contract_interaction_edit": "Edit",
