--- a/packages/dashboard/src/locales/en-US.json
+++ b/packages/dashboard/src/locales/en-US.json
@@ -21,6 +21,10 @@
     "close": "Close",
     "send": "Send",
     "resend": "Resend",
+    "print": "Print",
+    "download": "Download",
+    "print_preview": "Print Preview",
+    "download_preview": "Download Preview",
     "confirm_password": "Confirm Password",
     "about_dialog_license": "License: ",
     "footer_bounty_list": "Bounty List",
@@ -36,9 +40,15 @@
     "setup_page_create_restore_title": "Restoring from Identity or Backups",
     "setup_page_create_restore_subtitle": "Restoring from identity & historical backups.",
     "setup_page_create_restore_button": "Recovery or Sign In",
+    "create_account_mask_id": "MASK ID",
+    "create_account_private_key": "Private Key",
+    "create_account_identity_id": "Identity ID",
     "create_account_identity_title": "Create an Identity for Mask Network",
     "create_account_sign_in_button": "Recovery",
-    "create_account_identity_warning": "Please don’t forget your identity code. Your identity code is the only proof of your user identity and the only basis for you to encrypt or decrypt social activities.",
+    "create_account_persona_exists": "Persona already exists.",
+    "create_account_identity_warning": "Download your idendity ID to backup safely.",
+    "create_account_mnemonic_download_or_print": "I’ve downloaded it or printed it ",
+    "create_account_preview_tip": "This QR saves your identity code, please keep it safely. You can use Mask APP to scan QR to login persona.",
     "create_account_mnemonic_confirm_failed": "Incorrect identity code",
     "create_account_connect_social_media_button": "Create",
     "create_account_connect_social_media": "Connect to {{type}}",
