--- a/packages/dashboard/src/locales/en-US.json
+++ b/packages/dashboard/src/locales/en-US.json
@@ -349,8 +349,8 @@
     "labs_settings_market_trend_source": "Default Trending Source",
     "labs_settings_swap": "Swap Settings",
     "labs_settings_swap_network": "{{network}} Network Default Trading Source",
-    "labs_pets": "LootMan by MintTeam",
-    "labs_pets_desc": "Explore the endless possibilities of NFTs. Link and display your NFTs on social media in a revolutionized way.",
+    "labs_pets": "Non-Fungible Friends by Mint Team",
+    "labs_pets_desc": "Explore the endless possibilities of NFTs.",
     "labs_setup_tutorial": "Setup Tutorial",
     "labs_do_not_show_again": "Don't show again.",
     "labs_cryptoartai": "CRYPTOART.AI",
