--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -881,31 +881,17 @@
     "plugin_furucombo_smt_wrong": "Something went wrong!",
     "plugin_furucombo_head_pools": "Pools",
     "plugin_furucombo_head_action": "Action",
-    "plugin_pets_loot_properties": "Loot Properties:",
-    "plugin_pets_get_nft_shows": "Get your NFTshow and News:",
-    "plugin_pets_loot_des_0": "What’s up buddy! How’s everything going?",
-    "plugin_pets_loot_des_1": "Good to see you! I've been waiting awhile, how can I help you?",
-    "plugin_pets_loot_des_2": "I am the LOOTER from Mask, wanna join for fun? Line up!",
-    "plugin_pets_loot_des_3": "Beep! Beep! Clicking unavailable for now... Come later!",
-    "plugin_pets_loot_des_4": "Mask, Mask, I love Mask!",
-    "plugin_pets_loot_des_5": "I wanna go for a ride, but code won’t let me...",
-    "plugin_pets_loot_des_6": "Go talk with Suji! I wanna hangout for Worlds!",
-    "plugin_pets_loot_des_7": "Did you know that you are the boss of Mask?",
-    "plugin_pets_loot_des_8": "Heard the news? You guys are almost available for NFT show!",
-    "plugin_pets_loot_des_9": "Don’t enjoy my company? Click the “X” on the upper right.",
-    "plugin_pets_loot_des_10": "Check out my equipment by clicking “i”",
-    "plugin_pets_loot_des_11": "I am Loot #3870.",
-    "plugin_pets_loot_des_12": "How’s your day?",
-    "plugin_pets_loot_des_13": "I wonder what the real world is like…",
-    "plugin_pets_loot_des_14": "Where am I from? Metaverse.",
-    "plugin_pets_loot_info_0": "Falchion",
-    "plugin_pets_loot_info_1": "Chain Mail",
-    "plugin_pets_loot_info_2": "Hood",
-    "plugin_pets_loot_info_3": "Leather Belt",
-    "plugin_pets_loot_info_4": "Chain Boots",
-    "plugin_pets_loot_info_5": "Chain Gloves",
-    "plugin_pets_loot_info_6": "Amulet of the Twins",
-    "plugin_pets_loot_info_7": "Gold Ring",
+    "plugin_pets_dialog_title": "Non-Fungible Friends",
+    "plugin_pets_dialog_contract": "NFT Contract",
+    "plugin_pets_dialog_token": "Token ID",
+    "plugin_pets_dialog_msg": "Greeting message",
+    "plugin_pets_dialog_msg_optional": "Optional, 100 characters max.",
+    "plugin_pets_dialog_btn": "Confirm",
+    "plugin_pets_dialog_preview": "Preview",
+    "plugin_pets_dialog_created": "Created by MintTeam",
+    "plugin_pets_dialog_powered": "Powered by RSS3",
+    "plugin_pets_dialog_success": "Your Non-Fungible Friend has been set up successfully",
+    "plugin_pets_dialog_fail": "Setting failed, please try later",
     "popups_following_permissions": "The plugin ({{pluginName}}) (hosted on {{pluginURL}}) is going to request the following permissions:",
     "popups_permissions": "Permissions",
     "popups_sites": "Sites",
