--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -532,14 +532,15 @@
     "plugin_ito_sell_price": "Price",
     "plugin_ito_sell_total_amount": "Input",
     "plugin_ito_allocation_per_wallet": "Swap Limit {{limit}} {{token}}",
-    "plugin_ito_begin_time": "Start Time {{zone}}",
+    "plugin_ito_allocation_per_wallet_title": "Swap Limit",
+    "plugin_ito_begin_time_title": "Start Time",
     "plugin_ito_wait_unlock_time": "Claim after {{unlockTime}} (UTC+8)",
     "plugin_ito_claim": "Claim",
     "plugin_ito_claiming": "Claiming...",
     "plugin_ito_claim_all": "Claim All",
     "plugin_ito_qualification_start_time": "Qualification Start Time:",
     "plugin_ito_error_qualification_start_time": "Invalid: Qualification start time should be earlier than ITO end time",
-    "plugin_ito_end_time": "End Time {{zone}}",
+    "plugin_ito_end_time_title": "End Time",
     "plugin_ito_error_invalid_qualification": "Invalid Qualification Address",
     "plugin_ito_unlock_time_cert": "ITO Mask unlock time is {{date}}.",
     "plugin_ito_unlock_time": "Unlock Time {{zone}}",
