--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -543,7 +543,7 @@
     "plugin_ito_end_time_title": "End Time",
     "plugin_ito_error_invalid_qualification": "Invalid Qualification Address",
     "plugin_ito_unlock_time_cert": "ITO Mask unlock time is {{date}}.",
-    "plugin_ito_unlock_time": "Unlock Time {{zone}}",
+    "plugin_ito_unlock_time": "Unlock Time",
     "plugin_ito_launch_campaign": "SocialFi Launch Campaign",
     "plugin_ito_total_claimable_count": "Total: ",
     "plugin_ito_qualification_label": "Plugin Contract",
