fix: recover tx receipt && ito i18n key (#5542)
* fix: recover tx receipt && ito i18n key

* chore: temporary change for qa

* chore: little fix

* Revert "chore: temporary change for qa"

This reverts commit 7302619459f22d00ec3a25bf95cd03d1ba3f8587.

* chore: little fix

* fix: i18n key

* fix: dashboard ui style

* Revert "Revert "chore: temporary change for qa""

This reverts commit d4118d3a941dc8f21987a9ebe5006888ee61f355.

* Revert "chore: temporary change for qa"

* fix: ui

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -533,17 +533,18 @@
     "plugin_ito_sell_price": "Price",
     "plugin_ito_sell_total_amount": "Input",
     "plugin_ito_allocation_per_wallet": "Swap Limit {{limit}} {{token}}",
-    "plugin_ito_begin_time": "Start Time {{zone}}",
+    "plugin_ito_allocation_per_wallet_title": "Swap Limit",
+    "plugin_ito_begin_time_title": "Start Time",
     "plugin_ito_wait_unlock_time": "Claim after {{unlockTime}} (UTC+8)",
     "plugin_ito_claim": "Claim",
     "plugin_ito_claiming": "Claiming...",
     "plugin_ito_claim_all": "Claim All",
     "plugin_ito_qualification_start_time": "Qualification Start Time:",
     "plugin_ito_error_qualification_start_time": "Invalid: Qualification start time should be earlier than ITO end time",
-    "plugin_ito_end_time": "End Time {{zone}}",
+    "plugin_ito_end_time_title": "End Time",
     "plugin_ito_error_invalid_qualification": "Invalid Qualification Address",
     "plugin_ito_unlock_time_cert": "ITO Mask unlock time is {{date}}.",
-    "plugin_ito_unlock_time": "Unlock Time {{zone}}",
+    "plugin_ito_unlock_time": "Unlock Time",
     "plugin_ito_launch_campaign": "SocialFi Launch Campaign",
     "plugin_ito_total_claimable_count": "Total: ",
     "plugin_ito_qualification_label": "Plugin Contract",
@@ -792,6 +793,7 @@
     "plugin_pooltogether_no_pool": "There is no pool on this network.",
     "plugin_pooltogether_pool_ended": "Awarded",
     "plugin_pooltogether_deposit": "Deposit {{token}}",
+    "plugin_pooltogether_deposit_msg": "Deposit",
     "plugin_pooltogether_apr": "Earn {{apr}}% APR in {{token}}",
     "plugin_pooltogether_view_pool": "View pool",
     "plugin_pooltogether_prize": "{{period}} Prize",
