--- a/packages/mask/shared-ui/locales/ko-KR.json
+++ b/packages/mask/shared-ui/locales/ko-KR.json
@@ -444,17 +444,15 @@
     "plugin_ito_sell_price": "가격",
     "plugin_ito_sell_total_amount": "입력",
     "plugin_ito_allocation_per_wallet": "스왑 제한 {{limit}} {{token}}",
-    "plugin_ito_begin_time": "시작 시간 {{zone}}",
     "plugin_ito_wait_unlock_time": "{{unlockTime}}에 수령하기",
     "plugin_ito_claim": "수령",
     "plugin_ito_claiming": "수령 중",
     "plugin_ito_claim_all": "모두 수령",
     "plugin_ito_qualification_start_time": "자격 인정 시작 시간",
     "plugin_ito_error_qualification_start_time": "주의: 자격 인정 시작 시간이 ITO 종료 시간보다 빨아야 합니다.",
-    "plugin_ito_end_time": "종료 시간 {{zone}}",
     "plugin_ito_error_invalid_qualification": "무효한 인증 주소입니다.",
     "plugin_ito_unlock_time_cert": "ITO Mask 언락 시간은 {{date}}.",
-    "plugin_ito_unlock_time": "언락 시간 {{zone}}",
+    "plugin_ito_unlock_time": "언락 시간",
     "plugin_ito_launch_campaign": "SocialFi Launch Campaign",
     "plugin_ito_total_claimable_count": "전체: ",
     "plugin_ito_qualification_label": "플러그인 컨트랙트",
