--- a/packages/mask/shared-ui/locales/zh-TW.json
+++ b/packages/mask/shared-ui/locales/zh-TW.json
@@ -382,16 +382,14 @@
     "plugin_ito_sell_price": "價格",
     "plugin_ito_sell_total_amount": "輸入",
     "plugin_ito_allocation_per_wallet": "交換限制 {{limit}} {{token}}",
-    "plugin_ito_begin_time": "開始時間 {{zone}}",
     "plugin_ito_wait_unlock_time": "認領於 {{unlockTime}}",
     "plugin_ito_claim": "認領",
     "plugin_ito_claiming": "認領中",
     "plugin_ito_claim_all": "認領全部",
     "plugin_ito_qualification_start_time": "資格開始時間：",
     "plugin_ito_error_qualification_start_time": "錯誤：資格開始時間應早於 ITO 結束時間",
-    "plugin_ito_end_time": "結束時間 {{zone}}",
     "plugin_ito_error_invalid_qualification": "錯誤的資格地址",
-    "plugin_ito_unlock_time": "解鎖時間 {{zone}}",
+    "plugin_ito_unlock_time": "解鎖時間",
     "plugin_ito_total_claimable_count": "總計: ",
     "plugin_ito_qualification_label": "插件合約",
     "plugin_ito_message_label": "標題",
