--- a/packages/mask/shared-ui/locales/qya-AA.json
+++ b/packages/mask/shared-ui/locales/qya-AA.json
@@ -514,17 +514,15 @@
     "plugin_ito_sell_price": "crwdns5039:0crwdne5039:0",
     "plugin_ito_sell_total_amount": "crwdns5041:0crwdne5041:0",
     "plugin_ito_allocation_per_wallet": "crwdns5043:0{{limit}}crwdnd5043:0{{token}}crwdne5043:0",
-    "plugin_ito_begin_time": "crwdns5045:0{{zone}}crwdne5045:0",
     "plugin_ito_wait_unlock_time": "crwdns5047:0{{unlockTime}}crwdne5047:0",
     "plugin_ito_claim": "crwdns5049:0crwdne5049:0",
     "plugin_ito_claiming": "crwdns5051:0crwdne5051:0",
     "plugin_ito_claim_all": "crwdns5053:0crwdne5053:0",
     "plugin_ito_qualification_start_time": "crwdns5061:0crwdne5061:0",
     "plugin_ito_error_qualification_start_time": "crwdns5063:0crwdne5063:0",
-    "plugin_ito_end_time": "crwdns5065:0{{zone}}crwdne5065:0",
     "plugin_ito_error_invalid_qualification": "crwdns5067:0crwdne5067:0",
     "plugin_ito_unlock_time_cert": "crwdns10245:0{{date}}crwdne10245:0",
-    "plugin_ito_unlock_time": "crwdns5069:0{{zone}}crwdne5069:0",
+    "plugin_ito_unlock_time": "crwdns5069:0crwdne5069:0",
     "plugin_ito_launch_campaign": "crwdns10247:0crwdne10247:0",
     "plugin_ito_total_claimable_count": "crwdns10249:0crwdne10249:0",
     "plugin_ito_qualification_label": "crwdns5071:0crwdne5071:0",
