--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -2,6 +2,7 @@
     "wallet": "Wallet",
     "persona": "Persona",
     "unsupported_network": "Unsupported Network",
+    "connect_wallet__other_user_tip_intro": "Currently no wallet is bound by this account",
     "connect_wallet_tip_intro": "Connect your wallet here.",
     "connect_wallet_tip": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
     "verify_wallet_button": "Verify your wallet",
