--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -896,6 +896,7 @@
     "plugin_pets_dialog_powered": "Powered by RSS3",
     "plugin_pets_dialog_success": "Your Non-Fungible Friend has been set up successfully",
     "plugin_pets_dialog_fail": "Setting failed, please try later",
+    "plugin_pets_dialog_check_title": "Show NFT friends on the profile page.",
     "popups_following_permissions": "The plugin ({{pluginName}}) (hosted on {{pluginURL}}) is going to request the following permissions:",
     "popups_permissions": "Permissions",
     "popups_sites": "Sites",
