--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -266,9 +266,8 @@
     "plugin_wallet_snackbar_swap_token": "兑换代币",
     "plugin_wallet_guiding_step_1": "1. 选择网络",
     "plugin_wallet_guiding_step_2": "2. 选择钱包",
-    "plugin_wallet_connect_with": "连接到",
+    "plugin_wallet_connecting_to": "正在连接",
     "plugin_wallet_connect_with_retry": "再试一次",
-    "plugin_wallet_connected_with": "连接到",
     "plugin_wallet_metamask_error_already_request": "您已打开弹出窗口，请确认。",
     "plugin_wallet_connect_tip": "请确保您的 {{providerName}} 钱包是由官方 <providerLink>{{providerShortenLink}}</providerLink> 提供的。",
     "plugin_wallet_collections": "收藏品",
