--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1015,6 +1015,7 @@
     "plugin_artblocks_details": "Details",
     "plugin_artblocks_created_by": "Created by",
     "plugin_artblocks_purchase": "Purchase",
+    "plugin_artblocks_purchasing": "Purchasing....",
     "plugin_artblocks_legal_text": "By checking this box, I agree to ArtBlocks's <terms>Terms of Service</terms>.",
     "plugin_artblocks_check_tos_document": "Please check ToS document",
     "plugin_artblocks_price_per_mint": "Price per mint",
@@ -1027,5 +1028,7 @@
     "plugin_artblocks_chain": "Chain",
     "plugin_artblocks_blockchain_row": "Blockchain:",
     "plugin_artblocks_contract_row": "Contract:",
-    "plugin_artblocks_smt_wrong": "Something went wrong!"
+    "plugin_artblocks_smt_wrong": "Something went wrong!",
+    "plugin_artblocks_share": "I minted a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}.\nPlease install Mask plugin, and get yours too.",
+    "plugin_artblocks_share_no_official_account": "I minted a beautiful piece of art from '{{name}}' collection for {{price}} {{symbol}}. Welcome to join."
 }
