--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -419,6 +419,7 @@
     "plugin_trader_circulating_supply": "流通总量",
     "plugin_trader_volume_24": "交易量 (24h)",
     "plugin_trader_market_cap": "市值",
+    "plugin_trader_data_source": "数据源",
     "plugin_trader_price_updated": "价格已更新",
     "plugin_trader_view_pair_analytics": "查看交易对分析",
     "plugin_trader_swap": "兑换",
