--- a/packages/shared/src/locales/en-US.json
+++ b/packages/shared/src/locales/en-US.json
@@ -23,5 +23,5 @@
     "address_viewer_address_name_dns": "DNS",
     "address_viewer_address_name_rns": "RNS",
     "address_viewer_address_name_address": "address",
-    "address_viewer_address_name_twitter": "twitter"
+    "address_viewer_address_name_twitter": "twitter blue"
 }
