refactor: pr feedback

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -64,6 +64,7 @@
     "message": "Message",
     "dashboard_tab_collectibles": "Collectibles",
     "dashboard_no_collectible_found": "No collectible found.",
+    "dashboard_collectible_menu_all": "All ({{count}})",
     "days": "Every {{days}} days",
     "decrypted_postbox_add_recipients": "Append recipients",
     "decrypted_postbox_decrypting": "Mask decrypting…",
