--- a/packages/dashboard/src/locales/en-US.json
+++ b/packages/dashboard/src/locales/en-US.json
@@ -355,6 +355,8 @@
     "labs_pets_desc": "Explore the endless possibilities of NFTs.",
     "labs_cyber_connect": "CyberConnect",
     "labs_cyber_connect_desc": "Decentalized social graph protocol for user-centric Web3",
+    "labs_idea_market": "IdeaMarket",
+    "labs_idea_market_desc": "Ideamarket values the world's information,creating public narratives without third parties.",
     "labs_setup_tutorial": "Setup Tutorial",
     "labs_do_not_show_again": "Don't show again.",
     "labs_cryptoartai": "CRYPTOART.AI",
