feat(ideamarket): create base account view

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1008,6 +1008,7 @@
     "plugin_vcent_last_offer_at": "LATEST OFFER at",
     "plugin_ideamarket_smthg_wrong": "Something went wrong",
     "plugin_ideamarket_tab_listings": "Listings",
+    "plugin_ideamarket_tab_account": "Account",
     "plugin_ideamarket_mutual_holders": "Mutual holders",
     "plugin_ideamarket_mutual_tokens": "Mutual tokens",
     "plugin_ideamarket_details": "Details"
