--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -64,6 +64,7 @@
     "message": "Message",
     "dashboard_tab_collectibles": "Collectibles",
     "dashboard_no_collectible_found": "No collectible found.",
+    "dashboard_collectible_menu_all": "All ({{count}})",
     "days": "Every {{days}} days",
     "decrypted_postbox_add_recipients": "Append recipients",
     "decrypted_postbox_decrypting": "Mask decrypting…",
@@ -326,7 +327,6 @@
     "plugin_wallet_name_placeholder": "Enter 1-12 characters",
     "plugin_wallet_fail_to_sign": "Failed to sign password.",
     "plugin_wallet_cancel_sign": "Signature canceled.",
-    "plugin_wallet_nft_wall_current_display": "Current display: ",
     "plugin_red_packet_display_name": "Plugin: Lucky Drop",
     "plugin_red_packet_claimed": "Claimed",
     "plugin_red_packet_erc20_tab_title": "Token",
