--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1005,6 +1005,7 @@
     "nft_wallet_change": "Change",
     "nft_button_add_collectible": "Add Collectible",
     "nft_avatar": "NFT Avatar",
+    "web3_tab_hint": "No address found.",
     "plugin_artblocks_not_active": "This project is no more active",
     "plugin_artblocks_completed": "Completed",
     "plugin_artblocks_paused": "Paused",
