--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -103,7 +103,7 @@
     "mask_network": "Mask Network",
     "import": "Import",
     "no_search_result": "No result",
-    "set_nft_profile_photo": "Set NFT Profile Photo",
+    "set_nft_profile_photo": "Set NFT Photo",
     "use_nft": "Use NFT",
     "loading": "Loading...",
     "unlock": "Unlock",
