feat: instagram nft avater (#5718)
* feat: instagram nft avtar

* fix: bugfix

* fix: bugfix

* fix: bugfix

* fix: bugfix

* chore: ui style

* fix: web3 tab bugfix

* fix: bugfix

* chore: reply review

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -103,6 +103,8 @@
     "mask_network": "Mask Network",
     "import": "Import",
     "no_search_result": "No result",
+    "set_nft_profile_photo": "Set NFT Photo",
+    "use_nft": "Use NFT",
     "loading": "Loading...",
     "unlock": "Unlock",
     "payload_bad": "This post seems to be corrupted. Mask cannot decrypt it.",
