--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -84,6 +84,8 @@
     "setup_guide_connect_auto": "Connect",
     "setup_guide_connect_failed": "Re-Connect",
     "setup_guide_verify": "Verfiy",
+    "setup_guide_verify_checking": "Checking",
+    "setup_guide_verify_post_not_found": "No verification post found",
     "setup_guide_verifying": "Verfiying",
     "setup_guide_verifying_failed": "Re-Verfiy",
     "user_guide_tip_connected": "You have connected to this account successfully.",
