fix: several lucky drop issues (#5742)
* refactor: asset player

* fix: mask 816

* fix: mask 418

* fix: mask 836

* fix: qa

* chore: add token id formatter

* chore: implement format token id

* fix: type

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -31,8 +31,8 @@
     "add_nft_contract_search_hint": "Search NFT Contract Symbol Name or Address",
     "applications": "Applications",
     "additional_post_box__encrypted_post_pre": "Decrypt this post with #mask_io ! {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet_twitter_official_account": "Claim this lucky drop with #mask_io @{{account}} {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet": "Claim this lucky drop with #mask_io {{encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet_twitter_official_account": "Hi, claim this lucky drop with #mask_io @{{account}} {{encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet": "Hi, claim this lucky drop with #mask_io {{encrypted}}",
     "additional_post_box__steganography_post_pre": "This image is encrypted with #mask_io. 📪🔑 Install mask.io to decrypt it. {{random}}",
     "auto_paste_failed_dialog_title": "Paste manually",
     "auto_paste_failed_dialog_content": "Please copy the following text and image (if there is any) and publish it.",
@@ -350,6 +350,8 @@
     "plugin_red_packet_data_broken": "The Lucky Drop can’t be sent due to data damage. Please withdraw the assets after {{duration}}.",
     "plugin_red_packet_refunding": "Refunding",
     "plugin_red_packet_select_existing": "Past",
+    "plugin_red_packet_share_unclaimed_message_official_account": "Hi friends, I just found a lucky drop sent by @{{sender}} on {{network}} network. Follow @{{account}} (mask.io) to claim lucky drops.\n#mask_io #LuckyDrop\n{{payload}}",
+    "plugin_red_packet_share_unclaimed_message_not_twitter": "Hi friends, I just found a lucky drop sent by @{{sender}} on {{network}} network. \n{{payload}}",
     "plugin_red_packet_share_message_official_account": "I just claimed a lucky drop from @{{sender}} on {{network}} network. Follow @{{account}} (mask.io) to claim lucky drops.\n#mask_io #LuckyDrop\n{{payload}}",
     "plugin_red_packet_share_message_not_twitter": "I just claimed a lucky drop from @{{sender}} on {{network}} network. \n{{payload}}",
     "plugin_red_packet_nft_share_foreshow_message": "@{{sender}} is sending an NFT lucky drop on {{network}} network. Follow @{{account}} (mask.io) to claim NFT lucky drops.\n#mask_io #LuckyDrop\n{{payload}}",
