--- a/packages/dashboard/src/locales/en-US.json
+++ b/packages/dashboard/src/locales/en-US.json
@@ -47,7 +47,7 @@
     "create_account_sign_in_button": "Recovery",
     "create_account_persona_exists": "Persona already exists.",
     "create_account_mnemonic_download_or_print": "I have kept my identity code safely.",
-    "create_account_preview_tip": "This QR saves your identity code, please keep it safely. You can use Mask APP to scan QR to login persona.",
+    "create_account_preview_tip": "This QR code contains your identity code, please keep it safely. You can scan QR code to login your persona in Mask App.",
     "create_account_mnemonic_confirm_failed": "Incorrect identity code",
     "create_account_connect_social_media_button": "Create",
     "create_account_connect_social_media": "Connect to {{type}}",
