--- a/packages/plugins/RSS3/src/locales/en-US.json
+++ b/packages/plugins/RSS3/src/locales/en-US.json
@@ -3,5 +3,7 @@
     "no_activity_time": "No activity time",
     "attended": "attended",
     "no_data": "No data",
-    "total_grants": "Total {{count}} Grants"
+    "total_grants": "Total {{count}} Grants",
+    "contribution": "Contribution",
+    "contribution_other": "Contributions"
 }
